--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./css/main.css" />
-  <link rel="icon" type="image/x-icon" href="/img/android-chrome-512x512.png">
-  <link rel="icon" type="image/x-icon" href="/img/android-chrome-192x192.png">
-  <link rel="icon" type="image/x-icon" href="/img/apple-touch-icon.png">
-  <link rel="icon" type="image/x-icon" href="/img/favicon-16x16.png">
-  <link rel="icon" type="image/x-icon" href="/img/favicon-32x32.png">
+  <link rel="icon" type="image/x-icon" href="./img/android-chrome-512x512.png">
+  <link rel="icon" type="image/x-icon" href="./img/android-chrome-192x192.png">
+  <link rel="icon" type="image/x-icon" href="./img/apple-touch-icon.png">
+  <link rel="icon" type="image/x-icon" href="./img/favicon-16x16.png">
+  <link rel="icon" type="image/x-icon" href="./img/favicon-32x32.png">
   <title>Scoot</title>
 </head>
 
