--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <header class="main_header">
             <div class="container main_header__container">
                 <nav class="main_header__navigation">
-                    <a class="main_header__logo" href="/index.html">
+                    <a class="main_header__logo" href="./index.html">
                         <img class="main_header__img" src="./img/logo.svg" alt="logo" />
                     </a>
 
