--- a/about.html
+++ b/about.html
@@ -24,13 +24,13 @@
 
                     <ul class="main_header__list">
                         <li class="main_header__item">
-                            <a class="main_header__link" href="#">About</a>
+                            <a class="main_header__link" href="./about.html">About</a>
                         </li>
                         <li class="main_header__item">
                             <a class="main_header__link" href="#">Location</a>
                         </li>
                         <li class="main_header__item">
-                            <a class="main_header__link" href="#">Careers</a>
+                            <a class="main_header__link" href="./careers.html">Careers</a>
                         </li>
                     </ul>
                 </nav>
