--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a class="main_header__link" href="#">Location</a>
             </li>
             <li class="main_header__item">
-              <a class="main_header__link" href="#">Careers</a>
+              <a class="main_header__link" href="./careers.html">Careers</a>
             </li>
           </ul>
         </nav>
